# PersonalProject

./: README.md  pyproject.toml
examples/: basic_usage.py
src/ncp_client/: __init__.py  auth.py  client.py
