 [build-system]
 requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "ncp-api-client"
 version = "0.1.0"
 description = "Reusable Naver Cloud Platform (NCP) REST API client with GOV/global support"
 authors = [{ name = "PersonalProject" }]
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "requests>=2.32.0",
 ]

 [project.optional-dependencies]
 dev = [
     "python-dotenv>=1.0.0",
 ]

 [tool.setuptools.packages.find]
 where = ["src"]
